build_log3.txt
> Task :app:preBuild UP-TO-DATE
> Task :app:preDebugBuild UP-TO-DATE
> Task :app:mergeDebugNativeDebugMetadata NO-SOURCE
> Task :app:generateDebugResources UP-TO-DATE
> Task :app:packageDebugResources UP-TO-DATE
> Task :app:processDebugNavigationResources UP-TO-DATE
> Task :app:parseDebugLocalResources UP-TO-DATE
> Task :app:generateDebugRFile UP-TO-DATE
> Task :app:javaPreCompileDebug UP-TO-DATE
> Task :app:generateDebugAssets UP-TO-DATE
> Task :app:mergeDebugAssets UP-TO-DATE
> Task :app:compressDebugAssets UP-TO-DATE
> Task :app:checkDebugDuplicateClasses UP-TO-DATE
> Task :app:desugarDebugFileDependencies UP-TO-DATE
> Task :app:mergeExtDexDebug UP-TO-DATE
> Task :app:mergeLibDexDebug UP-TO-DATE
> Task :app:checkDebugAarMetadata UP-TO-DATE
> Task :app:compileDebugNavigationResources UP-TO-DATE
> Task :app:mapDebugSourceSetPaths UP-TO-DATE
> Task :app:mergeDebugResources UP-TO-DATE
> Task :app:createDebugCompatibleScreenManifests UP-TO-DATE
> Task :app:extractDeepLinksDebug UP-TO-DATE
> Task :app:compileDebugKotlin
> Task :app:processDebugMainManifest

> Task :app:compileDebugJavaWithJavac FAILED
.\gradlew.bat : G:\code\java\androidStudio\techo\app
\src\main\java\cc\runyan\techo\RecordActivity.java:4
7: error: constructor OutComeFragment in class 
OutComeFragment cannot be applied to given types;
At line:1 char:1
+ .\gradlew.bat assembleDebug 2>&1 | Out-File 
build_log3.txt -Encoding  ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (G:\cod 
   e\java\an...to given types;:String) [], RemoteE  
  xception
    + FullyQualifiedErrorId : NativeCommandError
 
        OutComeFragment outComeFragment = new 
OutComeFragment(Constants.OUTCOME_KIND);
                                          ^
  required: no arguments
  found:    int
  reason: actual and formal argument lists differ 
in length
G:\code\java\androidStudio\techo\app\src\main\java\c
c\runyan\techo\RecordActivity.java:48: error: 
constructor InComeFragment in class InComeFragment 
cannot be applied to given types;
        InComeFragment inComeFragment = new 
InComeFragment(Constants.INCOME_KIND);
                                        ^
  required: no arguments
  found:    int
  reason: actual and formal argument lists differ 
in length
2 errors

[Incubating] Problems report is available at: file:///G:/code/java/androidStudio/techo/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task 
':app:compileDebugJavaWithJavac'.
> Compilation failed; see the compiler output below.
  G:\code\java\androidStudio\techo\app\src\main\java
\cc\runyan\techo\RecordActivity.java:47: error: 
constructor OutComeFragment in class 
OutComeFragment cannot be applied to given types;
          OutComeFragment outComeFragment = new 
OutComeFragment(Constants.OUTCOME_KIND);
                                            ^
    required: no arguments
    found:    int
    reason: actual and formal argument lists differ 
in length
  G:\code\java\androidStudio\techo\app\src\main\java
\cc\runyan\techo\RecordActivity.java:48: error: 
constructor InComeFragment in class InComeFragment 
cannot be applied to given types;
          InComeFragment inComeFragment = new 
InComeFragment(Constants.INCOME_KIND);
                                          ^
    required: no arguments
    found:    int
    reason: actual and formal argument lists differ 
in length
  2 errors

* Try:
> Check your code and dependencies to fix the 
compilation error(s)
> Run with --scan to generate a Build Scan (powered 
by Develocity).

BUILD FAILED in 2s
21 actionable tasks: 3 executed, 18 up-to-date
